@@ -2,8 +2,10 @@ package org.example.coursetrackingautomation.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.example.coursetrackingautomation.dto.EnrollmentDetailsDTO;
 import org.example.coursetrackingautomation.entity.Course;
 import org.example.coursetrackingautomation.entity.Enrollment;
+import org.example.coursetrackingautomation.entity.EnrollmentStatus;
 import org.example.coursetrackingautomation.entity.User;
 import org.example.coursetrackingautomation.repository.CourseRepository;
 import org.example.coursetrackingautomation.repository.EnrollmentRepository;
@@ -12,67 +14,65 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Enrollment işlemlerini yöneten service sınıfı
- * - Öğrenci derse kayıt işlemleri
- * - Kontenjan kontrolü
- * - Tekrar kayıt kontrolü
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
+/**
+ * Manages course enrollments.
+ *
+ * <p>This service enforces basic enrollment rules such as course activity checks, quota validation,
+ * duplicate enrollment prevention, and status transitions.</p>
+ */
 public class EnrollmentService {
     
     private final EnrollmentRepository enrollmentRepository;
     private final CourseRepository courseRepository;
     private final UserRepository userRepository;
     
-    // Aktif enrollment durumları
-    private static final List<String> ACTIVE_ENROLLMENT_STATUSES = 
-        Arrays.asList("ACTIVE", "ENROLLED", "REGISTERED");
+    private static final List<EnrollmentStatus> ACTIVE_ENROLLMENT_STATUSES = List.of(
+        EnrollmentStatus.ACTIVE,
+        EnrollmentStatus.ENROLLED,
+        EnrollmentStatus.REGISTERED
+    );
+
+    private static final EnumSet<EnrollmentStatus> ALLOWED_ENROLLMENT_STATUSES = EnumSet.allOf(EnrollmentStatus.class);
     
-    /**
-     * Öğrenciyi derse kaydeder
-     * Validasyonlar:
-     * 1. Kontenjan dolu mu?
-     * 2. Öğrenci dersi zaten aldı mı?
-     * 
-     * @param studentId Öğrenci ID
-     * @param courseId Ders ID
-     * @return Oluşturulan enrollment
-     * @throws RuntimeException Kontenjan doluysa veya öğrenci dersi zaten aldıysa
-     */
     @Transactional
+    /**
+     * Enrolls a student into a course.
+     *
+     * <p>The course must be active, the course quota must not be full, and the student must not
+     * already have an active enrollment for the same course.</p>
+     *
+     * @param studentId the student identifier
+     * @param courseId the course identifier
+     * @return the persisted {@link Enrollment}
+     * @throws IllegalArgumentException if validation fails or referenced entities cannot be found
+     */
     public Enrollment enrollStudent(Long studentId, Long courseId) {
         log.info("Enrolling student ID: {} to course ID: {}", studentId, courseId);
         
-        // Öğrenci ve ders varlığını kontrol et
         User student = userRepository.findById(studentId)
             .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
         
         Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
+            .orElseThrow(() -> new IllegalArgumentException("Ders bulunamadı: " + courseId));
         
-        // Ders aktif mi kontrol et
         if (!course.isActive()) {
-            throw new IllegalArgumentException("Ders aktif değil, kayıt yapılamaz");
+            throw new IllegalArgumentException("Ders aktif değil; kayıt işlemi yapılamaz");
         }
         
-        // VALIDATION 1: Kontenjan kontrolü
         validateQuota(course);
         
-        // VALIDATION 2: Öğrenci dersi zaten aldı mı?
         validateDuplicateEnrollment(student, course);
         
-        // Enrollment oluştur
         Enrollment enrollment = Enrollment.builder()
             .student(student)
             .course(course)
-            .status("ENROLLED") // Varsayılan durum
+            .status(EnrollmentStatus.ENROLLED)
             .absenteeismCount(0)
             .enrollmentDate(LocalDateTime.now())
             .build();
@@ -85,144 +85,208 @@ public class EnrollmentService {
         return savedEnrollment;
     }
     
-    /**
-     * Kontenjan kontrolü yapar
-     * 
-     * @param course Kontrol edilecek ders
-     * @throws RuntimeException Kontenjan doluysa
-     */
     @Transactional(readOnly = true)
+    /**
+     * Validates that the course has remaining quota.
+     *
+     * @param course the course to check
+     * @throws IllegalArgumentException if the quota is full
+     */
     public void validateQuota(Course course) {
-        // Mevcut aktif kayıt sayısını hesapla
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        long currentEnrollments = allEnrollments.stream()
-            .filter(e -> e.getCourse().getId().equals(course.getId()))
-            .filter(e -> ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .count();
+        long currentEnrollments = enrollmentRepository.countByCourseIdAndStatusIn(course.getId(), ACTIVE_ENROLLMENT_STATUSES);
         
         if (currentEnrollments >= course.getQuota()) {
             String message = String.format(
-                "Kontenjan dolu! Ders: %s, Mevcut kayıt: %d, Kontenjan: %d",
+                "Kontenjan dolu. Ders: %s, Mevcut kayıt: %d, Kontenjan: %d",
                 course.getCode(), currentEnrollments, course.getQuota());
             log.warn(message);
-            throw new RuntimeException(message);
+            throw new IllegalArgumentException(message);
         }
         
         log.debug("Quota check passed for course: {}, Current: {}, Quota: {}", 
             course.getCode(), currentEnrollments, course.getQuota());
     }
     
-    /**
-     * Öğrencinin dersi zaten alıp almadığını kontrol eder
-     * 
-     * @param student Kontrol edilecek öğrenci
-     * @param course Kontrol edilecek ders
-     * @throws RuntimeException Öğrenci dersi zaten aldıysa
-     */
     @Transactional(readOnly = true)
+    /**
+     * Validates that the student does not already have an active enrollment for the given course.
+     *
+     * @param student the student entity
+     * @param course the course entity
+     * @throws IllegalArgumentException if an active enrollment already exists
+     */
     public void validateDuplicateEnrollment(User student, Course course) {
-        // Öğrencinin bu derse aktif kaydı var mı kontrol et
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        boolean exists = allEnrollments.stream()
-            .anyMatch(e -> e.getStudent().getId().equals(student.getId()) &&
-                          e.getCourse().getId().equals(course.getId()) &&
-                          ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()));
+        boolean exists = enrollmentRepository.existsByStudentIdAndCourseIdAndStatusIn(
+            student.getId(),
+            course.getId(),
+            ACTIVE_ENROLLMENT_STATUSES
+        );
         
         if (exists) {
             String message = String.format(
-                "Öğrenci (%s) bu dersi (%s) zaten almış durumda",
+                "Öğrenci (%s) bu derse (%s) zaten kayıtlı",
                 student.getUsername(), course.getCode());
             log.warn(message);
-            throw new RuntimeException(message);
+            throw new IllegalArgumentException(message);
         }
         
         log.debug("Duplicate enrollment check passed for student: {}, course: {}", 
             student.getUsername(), course.getCode());
     }
     
-    /**
-     * Öğrencinin bir derse kayıtlı olup olmadığını kontrol eder
-     * 
-     * @param studentId Öğrenci ID
-     * @param courseId Ders ID
-     * @return true eğer öğrenci derse kayıtlıysa
-     */
     @Transactional(readOnly = true)
+    /**
+     * Checks whether a student currently has an active enrollment for a given course.
+     *
+     * @param studentId the student identifier
+     * @param courseId the course identifier
+     * @return {@code true} if an active enrollment exists
+     * @throws IllegalArgumentException if either id is null
+     */
     public boolean isStudentEnrolled(Long studentId, Long courseId) {
-        User student = userRepository.findById(studentId)
-            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
-        
-        Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
-        
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        return allEnrollments.stream()
-            .anyMatch(e -> e.getStudent().getId().equals(student.getId()) &&
-                          e.getCourse().getId().equals(course.getId()) &&
-                          ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()));
+        if (studentId == null || courseId == null) {
+            throw new IllegalArgumentException("Öğrenci id ve ders id boş olamaz");
+        }
+
+        return enrollmentRepository.existsByStudentIdAndCourseIdAndStatusIn(studentId, courseId, ACTIVE_ENROLLMENT_STATUSES);
     }
     
-    /**
-     * Öğrencinin bir derse kaydını iptal eder (DROPPED olarak işaretler)
-     * 
-     * @param studentId Öğrenci ID
-     * @param courseId Ders ID
-     */
     @Transactional
+    /**
+     * Marks an active enrollment as dropped.
+     *
+     * @param studentId the student identifier
+     * @param courseId the course identifier
+     * @throws IllegalArgumentException if no active enrollment exists
+     */
     public void dropEnrollment(Long studentId, Long courseId) {
         log.info("Dropping enrollment for student ID: {} from course ID: {}", 
             studentId, courseId);
+
+        Enrollment enrollment = enrollmentRepository
+            .findFirstByStudentIdAndCourseIdAndStatusIn(studentId, courseId, ACTIVE_ENROLLMENT_STATUSES)
+            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bu derse kayıtlı değil"));
         
-        User student = userRepository.findById(studentId)
-            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
-        
-        Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
-        
-        // Öğrencinin bu derse kaydını bul
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        Enrollment enrollment = allEnrollments.stream()
-            .filter(e -> e.getStudent().getId().equals(studentId) &&
-                        e.getCourse().getId().equals(courseId) &&
-                        ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .findFirst()
-            .orElseThrow(() -> new IllegalArgumentException(
-                "Öğrenci bu derse kayıtlı değil"));
-        
-        enrollment.setStatus("DROPPED");
+        enrollment.setStatus(EnrollmentStatus.DROPPED);
         enrollmentRepository.save(enrollment);
         
         log.info("Enrollment dropped successfully for student ID: {} from course ID: {}", 
             studentId, courseId);
     }
-    
+
+    @Transactional
     /**
-     * Belirli bir derse ait tüm aktif kayıtları getirir
+     * Updates the status of an enrollment.
+     *
+     * @param enrollmentId the enrollment identifier
+     * @param status new status value; compared case-insensitively and stored as uppercase
+     * @return the persisted {@link Enrollment}
+     * @throws IllegalArgumentException if validation fails or the enrollment cannot be found
      */
-    @Transactional(readOnly = true)
-    public List<Enrollment> getActiveEnrollmentsByCourse(Long courseId) {
-        Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
-        
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        return allEnrollments.stream()
-            .filter(e -> e.getCourse().getId().equals(courseId))
-            .filter(e -> ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .collect(Collectors.toList());
+    public Enrollment updateEnrollmentStatus(Long enrollmentId, String status) {
+        if (enrollmentId == null) {
+            throw new IllegalArgumentException("Kayıt id boş olamaz");
+        }
+        String safeStatus = status == null ? "" : status.trim().toUpperCase();
+        if (safeStatus.isBlank()) {
+            throw new IllegalArgumentException("Kayıt durumu boş olamaz");
+        }
+        EnrollmentStatus newStatus;
+        try {
+            newStatus = EnrollmentStatus.valueOf(safeStatus);
+        } catch (IllegalArgumentException ex) {
+            throw new IllegalArgumentException("Desteklenmeyen kayıt durumu: " + safeStatus);
+        }
+        if (!ALLOWED_ENROLLMENT_STATUSES.contains(newStatus)) {
+            throw new IllegalArgumentException("Desteklenmeyen kayıt durumu: " + safeStatus);
+        }
+
+        Enrollment enrollment = enrollmentRepository.findById(enrollmentId)
+            .orElseThrow(() -> new IllegalArgumentException("Kayıt bulunamadı: " + enrollmentId));
+
+        enrollment.setStatus(newStatus);
+        Enrollment saved = enrollmentRepository.save(enrollment);
+        log.info("Enrollment status updated: id={}, status={}", saved.getId(), saved.getStatus());
+        return saved;
     }
     
-    /**
-     * Belirli bir öğrencinin tüm aktif kayıtlarını getirir
-     */
     @Transactional(readOnly = true)
+    /**
+     * Returns all active enrollments for a course.
+     *
+     * @param courseId the course identifier
+     * @return list of active enrollments
+     * @throws IllegalArgumentException if {@code courseId} is null
+     */
+    public List<Enrollment> getActiveEnrollmentsByCourse(Long courseId) {
+        if (courseId == null) {
+            throw new IllegalArgumentException("Ders id boş olamaz");
+        }
+        return enrollmentRepository.findByCourseIdAndStatusIn(courseId, ACTIVE_ENROLLMENT_STATUSES);
+    }
+    
+    @Transactional(readOnly = true)
+    /**
+     * Returns all active enrollments for a student.
+     *
+     * @param studentId the student identifier
+     * @return list of active enrollments
+     * @throws IllegalArgumentException if {@code studentId} is null
+     */
     public List<Enrollment> getActiveEnrollmentsByStudent(Long studentId) {
-        User student = userRepository.findById(studentId)
-            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
-        
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        return allEnrollments.stream()
-            .filter(e -> e.getStudent().getId().equals(studentId))
-            .filter(e -> ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .collect(Collectors.toList());
+        if (studentId == null) {
+            throw new IllegalArgumentException("Öğrenci id boş olamaz");
+        }
+        return enrollmentRepository.findByStudentIdAndStatusIn(studentId, ACTIVE_ENROLLMENT_STATUSES);
+    }
+
+    @Transactional(readOnly = true)
+    /**
+     * Retrieves an enrollment by its identifier.
+     *
+     * @param enrollmentId the enrollment identifier
+     * @return the persisted enrollment
+     * @throws IllegalArgumentException if {@code enrollmentId} is null or not found
+     */
+    public Enrollment getEnrollmentById(Long enrollmentId) {
+        if (enrollmentId == null) {
+            throw new IllegalArgumentException("Kayıt id boş olamaz");
+        }
+        return enrollmentRepository.findById(enrollmentId)
+            .orElseThrow(() -> new IllegalArgumentException("Kayıt bulunamadı: " + enrollmentId));
+    }
+
+    @Transactional(readOnly = true)
+    /**
+     * Retrieves a UI-friendly enrollment details projection.
+     *
+     * @param enrollmentId the enrollment identifier
+     * @return enrollment details DTO
+     * @throws IllegalArgumentException if the enrollment cannot be found
+     */
+    public EnrollmentDetailsDTO getEnrollmentDetailsById(Long enrollmentId) {
+        Enrollment enrollment = getEnrollmentById(enrollmentId);
+        String studentDisplay = "-";
+        if (enrollment.getStudent() != null) {
+            String firstName = enrollment.getStudent().getFirstName() == null ? "" : enrollment.getStudent().getFirstName();
+            String lastName = enrollment.getStudent().getLastName() == null ? "" : enrollment.getStudent().getLastName();
+            studentDisplay = (firstName + " " + lastName).trim();
+            if (studentDisplay.isBlank()) {
+                studentDisplay = enrollment.getStudent().getUsername() == null ? "-" : enrollment.getStudent().getUsername();
+            }
+        }
+
+        String courseDisplay = "-";
+        if (enrollment.getCourse() != null) {
+            String code = enrollment.getCourse().getCode() == null ? "" : enrollment.getCourse().getCode();
+            String name = enrollment.getCourse().getName() == null ? "" : enrollment.getCourse().getName();
+            courseDisplay = (code + " - " + name).trim();
+            if (courseDisplay.equals("-")) {
+                courseDisplay = name.isBlank() ? (code.isBlank() ? "-" : code) : name;
+            }
+        }
+
+        EnrollmentStatus status = enrollment.getStatus();
+        return new EnrollmentDetailsDTO(enrollment.getId(), studentDisplay, courseDisplay, status);
     }
 }
